# car-modules

./: README.md  combined.py  drive.ino  keys.py  recieve.py  reco-ros2-ws-init.sh  reco-run.sh  reco-start.sh  reco-stop.sh  rpi_controller.old.py  rpi_controller.py  rpi_controller_pid.py  send.py  send_pid.py  setup-rpi.sh  subscriber_from_udp.cpp  test_controller.py  ubx_reader (1).py
GPS_RTK/: base_station.yml  combined.cpp  combined.py  gps_publisher.cpp  nmea_readex.py  rtk.py  ublox.py  ubx_reader.py
ROS_final/: CMakeLists.txt  controls_from_udp.cpp  controls_to_serial.cpp  gps_publisher.cpp  package.xml  publisher_from_serial.cpp  subscriber_to_udp.cpp
accelero_test/: accelero_test.ino
drive/: drive.ino
gps_arduino_pico/: gps_arduino_pico.ino
hall_sensors/: hall_sensors.ino
lidar/: lidar.ino
pico_gps/example/: coordinates_converted.py
pico_gps_test/example/: gnss_settings.py  print_nmea0183.py
pid/: pid.ino
reco/: brain.py  publish_controls.py  publish_distance.py
sensors/: sensors.ino  voltage.h  voltage.ino
test/: test.ino
test_hall/: test_hall.ino
throttle/: throttle.ino
turn/: turn.ino
